increase innodb buffer pool settings

--- a/config/user.cnf
+++ b/config/user.cnf
@@ -7,3 +7,13 @@ bind-address=0.0.0.0
 
 # Disable binary logging
 log_bin=OFF
+
+# Increase buffer pool chunk size to 0.25GB
+innodb_buffer_pool_chunk_size=268435456
+
+# Set number of buffer pool instances
+innodb_buffer_pool_instances=10
+
+# Increase buffer pool size to 2.5GB
+# Must be a multiple of chunk_size * pool_instances
+innodb_buffer_pool_size=2684354560
